[package]
name = "massa-slot-replayer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
num = "=0.4"
rocksdb = "0.21"
glob = "0.3.1"
tokio = "1.23"
tempfile = "3.10"
copy_dir = "0.1.3"

massa_time = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_time" }
massa_models = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_models" }
massa_db_exports = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_db_exports" }
massa_db_worker = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_db_worker"}
massa_ledger_exports = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_ledger_exports" }
massa_ledger_worker = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_ledger_worker" }
massa_async_pool = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_async_pool" }
massa_pos_exports = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_pos_exports" }
massa_pos_worker = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_pos_worker" }
massa_executed_ops = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_executed_ops" }
massa_final_state = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_final_state" }
massa_execution_exports = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_execution_exports" }
massa_execution_worker = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_execution_worker" }
massa_versioning = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_versioning" }
massa_metrics = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_metrics" }
massa_wallet = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_wallet" }
