[package]
name = "massa-slot-replayer"
version = "0.1.0"
edition = "2021"

[features]
db_storage_backend = ["execution-trace"]
file_storage_backend = ["execution-trace"]
execution-trace = []

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
copy_dir = "0.1.3"
glob = "0.3.1"
num = "=0.4"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
prost = { version = "=0.12" }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rocksdb = "0.21"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10"
tokio = "1.23"
tracing = { version = "0.1", "features" = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3" }

massa_time = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_time" }
massa_models = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_models" }
massa_db_exports = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_db_exports" }
massa_db_worker = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_db_worker" }
massa_ledger_exports = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_ledger_exports" }
massa_ledger_worker = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_ledger_worker" }
massa_async_pool = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_async_pool" }
massa_pos_exports = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_pos_exports" }
massa_pos_worker = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_pos_worker" }
massa_executed_ops = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_executed_ops" }
massa_final_state = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_final_state" }
massa_hash = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_hash" }
massa_execution_exports = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_execution_exports", features = [
    "execution-info",
    "execution-trace",

] }
massa_execution_worker = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_execution_worker", features = [
    "execution-info",
    "file_storage_backend",
    "slot-replayer",
] }
massa_versioning = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_versioning" }
massa_metrics = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_metrics" }
massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "38950875a7aa406fedc4f0b8336864e5ff290f2c" }
massa_serialization = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_serialization" }
massa_signature = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_signature" }
massa_storage = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_storage" }
massa_wallet = { git = "https://github.com/massalabs/massa", rev = "a804a2cdb688b99bf10296a5f3329fb31b613c0d", package = "massa_wallet" }
